--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,5 +7,11 @@
         = csrf_meta_tags
     
     %body
+        %h1.title Personal Dragcave Viewer
         #main
+            - if flash[:notice]
+                #notice.message= flash[:notice]
+            - elsif flash[:warning]
+                #warning.message= flash[:warning]
+                
             = yield
